# NIST_AI_Trustworthy_Eval

./: .env  .env.example  .gitignore  .gitmodules  AGENTS.md  Design.md  LICENSE  PRD.md  README.md  SUBMODULES.md  course-materials.html  environment.yml  opencode.json  pyproject.toml  todo.json
.github/: SECRETS.md
agents/rd-agent-mcp/: .gitignore  README.md  functions.py  pyproject.toml
agents/rd-agent-mcp/src/rd_agent_mcp/: __init__.py  __main__.py  agent_pipeline.py  config.py  constants.py  functions.py  research_runner.py  server.py  test_runner.py
agents/rd-agent-mcp/src/rd_agent_mcp/agents/: __init__.py  adk_ralph.py  coordinator.py  rd_agent.py  router.py
agents/rd-agent-mcp/src/rd_agent_mcp/chains/: __init__.py
agents/rd-agent-mcp/src/rd_agent_mcp/database/: __init__.py  models.py  schema.py
agents/rd-agent-mcp/src/rd_agent_mcp/graph/: __init__.py  edges.py  nodes.py  research_graph.py  state.py
agents/rd-agent-mcp/src/rd_agent_mcp/lm_studio/: __init__.py  client.py  models.py
agents/rd-agent-mcp/src/rd_agent_mcp/phases/: __init__.py  agent.py  base.py  embeddings.py  experiment.py  questions.py  results.py
agents/rd-agent-mcp/src/rd_agent_mcp/tools/: __init__.py  github.py  latex.py  latex_section_critique.py  research.py  test_cases.py
agents/rd-agent-mcp/src/rd_agent_mcp/utils/: __init__.py  file_utils.py  homework_text.py  logging.py
agents/rd-agent-mcp/src/rd_agent_mcp/vectorstore/: __init__.py  chroma.py  embeddings.py
agents/rd-agent-mcp/tests/: test_latex_section_critique.py  test_smoke.py
assets/: README.md
config/: README.md  lmstudio-granite-agent-to-agent.jinja
examples/: README.md
knowledge_base/: README.md
man/: actionlint.1
output/: results.json  rust_output.json
schemas/: candidate_review.schema.json
scripts/: CONDA_ENVIRONMENT.md  README.md  agent_eval_multiturn_phases.py  candidate_llm_judge_review.py  critique_latex_sections_stub.py  customs_noeval.py  emit_nist_rubric_table.py  extract_course_kb_docling.py  generate_article_section_agents.py  generate_final_scores.py  gh_actions_secret_presence_report.py  judge_evaluation_phase2_phase3.py  list_github_secret_candidates_from_env.py  nist_experiment_graph_loop.py  nist_quiz_prompts.py  package_latex_submission_zip.py  run_coursework_outputs.py  run_nist_llm_evaluation.py  run_phase2_phase3.py  support_noeval.py  sync_cursor_lmstudio_models.py  verify_nist_prompt_inventory.py
skills/: README.md
src/: 00README.json  appendix.tex  conclusion.tex  ethics.tex  experiment.tex  fancyhdr.sty  (+18 more)
(+221 files in other folders)
